--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -3089,9 +3089,9 @@ PHI_totalist_DEF:0 "the Socialist Republic of the Philippines"
 POL_authoritarian_democrat:0 "Kingdom of Poland"
 POL_authoritarian_democrat_ADJ:0 "Polish"
 POL_authoritarian_democrat_DEF:0 "the Kingdom of Poland"
-POL_market_liberal:0 "Poland"
+POL_market_liberal:0 "Kingdom of Poland"
 POL_market_liberal_ADJ:0 "Polish"
-POL_market_liberal_DEF:0 "Poland"
+POL_market_liberal_DEF:0 "the Kingdom of Poland"
 POL_national_populist:0 "Kingdom of Poland"
 POL_national_populist_ADJ:0 "Polish"
 POL_national_populist_DEF:0 "the Kingdom of Poland"
@@ -3101,21 +3101,54 @@ POL_paternal_autocrat_DEF:0 "the Kingdom of Poland"
 POL_radical_socialist:0 "Polish Socialist Republic"
 POL_radical_socialist_ADJ:0 "Socialist-Polish"
 POL_radical_socialist_DEF:0 "Polish Socialist Republic"
-POL_social_conservative:0 "Polish Republic"
+POL_social_conservative:0 "Kingdom of Poland"
 POL_social_conservative_ADJ:0 "Polish"
-POL_social_conservative_DEF:0 "the Polish Republic"
-POL_social_democrat:0 "Polish Republic"
+POL_social_conservative_DEF:0 "the Kingdom of Poland"
+POL_social_democrat:0 "Kingdom of Poland"
 POL_social_democrat_ADJ:0 "Polish"
-POL_social_democrat_DEF:0 "the Polish Republic"
-POL_social_liberal:0 "Poland"
+POL_social_democrat_DEF:0 "the Kingdom of Poland"
+POL_social_liberal:0 "Kingdom of Poland"
 POL_social_liberal_ADJ:0 "Polish"
-POL_social_liberal_DEF:0 "Poland"
+POL_social_liberal_DEF:0 "the Kingdom of Poland"
 POL_syndicalist:0 "Polish Socialist Republic"
 POL_syndicalist_ADJ:0 "Socialist-Polish"
 POL_syndicalist_DEF:0 "the Polish Socialist Republic"
 POL_totalist:0 "Polish Socialist Republic"
 POL_totalist_ADJ:0 "Socialist-Polish"
 POL_totalist_DEF:0 "the Polish Socialist Republic"
+
+### Polish Republic Cosmetic Tag ###
+
+POL_REPUBLIC_authoritarian_democrat:0 "Polish Republic"
+POL_REPUBLIC_authoritarian_democrat_ADJ:0 "Polish"
+POL_REPUBLIC_authoritarian_democrat_DEF:0 "the Polish Republic"
+POL_REPUBLIC_market_liberal:0 "Poland"
+POL_REPUBLIC_market_liberal_ADJ:0 "Polish"
+POL_REPUBLIC_market_liberal_DEF:0 "Poland"
+POL_REPUBLIC_national_populist:0 "Polish Republic"
+POL_REPUBLIC_national_populist_ADJ:0 "Polish"
+POL_REPUBLIC_national_populist_DEF:0 "the Polish Republic"
+POL_REPUBLIC_paternal_autocrat:0 "Polish Republic"
+POL_REPUBLIC_paternal_autocrat_ADJ:0 "Polish"
+POL_REPUBLIC_paternal_autocrat_DEF:0 "the Polish Republic"
+POL_REPUBLIC_radical_socialist:0 "Polish Socialist Republic"
+POL_REPUBLIC_radical_socialist_ADJ:0 "Socialist-Polish"
+POL_REPUBLIC_radical_socialist_DEF:0 "Polish Socialist Republic"
+POL_REPUBLIC_social_conservative:0 "Polish Republic"
+POL_REPUBLIC_social_conservative_ADJ:0 "Polish"
+POL_REPUBLIC_social_conservative_DEF:0 "the Polish Republic"
+POL_REPUBLIC_social_democrat:0 "Polish Republic"
+POL_REPUBLIC_social_democrat_ADJ:0 "Polish"
+POL_REPUBLIC_social_democrat_DEF:0 "the Polish Republic"
+POL_REPUBLIC_social_liberal:0 "Polish Republic"
+POL_REPUBLIC_social_liberal_ADJ:0 "Polish"
+POL_REPUBLIC_social_liberal_DEF:0 "the Polish Republic"
+POL_REPUBLIC_syndicalist:0 "Polish Socialist Republic"
+POL_REPUBLIC_syndicalist_ADJ:0 "Socialist-Polish"
+POL_REPUBLIC_syndicalist_DEF:0 "the Polish Socialist Republic"
+POL_REPUBLIC_totalist:0 "Polish Socialist Republic"
+POL_REPUBLIC_totalist_ADJ:0 "Socialist-Polish"
+POL_REPUBLIC_totalist_DEF:0 "the Polish Socialist Republic"
 
 POR_authoritarian_democrat:0 "Portugal"
 POR_authoritarian_democrat_ADJ:0 "Portuguese"
